0.53 2022-10- lichtkind
--------
    * = maintenance
    
0.52 2022-10-28 lichtkind
--------
    * = maintenance
    * + added Pantone Report colors of spring / summer 2022
    * & move to Dist::Zilla
    * & added Readme's for github and CPAN
    
0.51 2022-10-27 lichtkind
--------
    * = small fixes
    * ? fixed links to ::X module
    * ? realistic names in example code in chapter SYNOPSIS
    * & added CONTRIBUTING file
    * & added cpanfile


0.5  2022-10-26 lichtkind
--------
    * = first public release
    * * complete color lists (even 2022 report colors ae missing)