@@ -1,6 +1,10 @@
 0.53 2022-10- lichtkind
 --------
     * = maintenance
+    * + basil ws missing from spring / summer 2022
+    * + added Pantone Report colors of autumn / winter 2022
+    * ? corrected number
+    * ? typos
     
 0.52 2022-10-28 lichtkind
 --------
@@ -8,6 +12,7 @@
     * + added Pantone Report colors of spring / summer 2022
     * & move to Dist::Zilla
     * & added Readme's for github and CPAN
+    * ? added link to color search engine
     
 0.51 2022-10-27 lichtkind
 --------
